updating some contrast issues with the submit button

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -365,7 +365,7 @@ footer nav.sociallinks img {
 
 .contact-form button {
     background-color: #E26E3C;
-    color: white;
+    color: #0B2027;
     padding: 10px;
     margin-top: 20px;
     border: none;
@@ -594,6 +594,7 @@ tr:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
 .newsletter-signup label {
@@ -622,6 +623,8 @@ tr:hover {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    /* font-size: 1rem; */
+    /* box-shadow: 0 4px 8px #738f22; */
 }
 
 .newsletter-signup button:hover {
